# SSE_Group_Project

./: .gitignore  Group Project_SSE.txt  Home Services.txt  README.md  bootstrap.ps1  env  env.example  package-lock.json  package.json  turbo.json
.devcontainer/: .dockerignore  Dockerfile  build-and-push.sh  devcontainer.json  docker-compose.yml  post-create.sh  post-setup.sh
.github/workflows/: build-devcontainer.yml
backend/: .env.example  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
backend/.hypothesis/constants/: 37c8da410798a914  3e5d2454dafbd27f  55d2451dca32e2d1  65856aab8912c58d  92df9668cbd20d44  a9d5554792753b02  da39a3ee5e6b4b0d  e0f4aa022479cddf
backend/app/: __init__.py  api.py  auth.py  database.py  email_service.py
backend/app/routes/: admin_routes.py  auth_routes.py
backend/schema/: add_bundle_support.sql  add_discount_to_work_items.sql  add_inspection_package.sql  database_schema.sql  fix_bundle_providers.sql  grant_roles.sql  remove_provider_role.sql  update_consent.sql  update_providers_to_adelaide.sql
backend/scripts/: build.js  clean.js  dev.js  init-db.js  lint.js  setup.js  typecheck.js
backend/tests/: README.md  test_api.py  test_fuzz_api.py  test_integration.py  test_security_features.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/public/: audit.json
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/auth/: Auth0Provider.tsx  useAuthSync.ts  useUserConsent.ts  useUserRoles.ts
frontend/src/components/: BundleDetailsModal.tsx  ConsentGate.tsx  ErrorBoundary.tsx  LoginButton.tsx  ProtectedRoute.tsx  RoleGate.tsx  TimeSlotPicker.tsx  withProtectedRoute.tsx
frontend/src/lib/: api.ts  geolocation.ts  routes.ts
frontend/src/pages/: AdminDashboard.tsx  AuditPage.tsx  Booking.tsx  BookingGeneral.tsx  BookingSpecific.tsx  Confirmation.tsx  Dashboard.tsx  DataConsent.tsx  InspectionBooking.tsx  InspectionDetails.tsx  Inspections.tsx  Payment.tsx  (+3 more)
